Fancy Categories Changelog

* 0.5
    * Added option to not show posts

* 0.4.4
    * using unicode number codes in css stylesheet
    * fixed bug with duplicate entries in subcategories

* 0.4.3
    * nicer list indenting
    * re-fixed permalink bug introduced sometime after version 0.3.5

* 0.4.2
    * fixed bug with extraneous <ul>

* 0.4.1
		* fixed bug with get_sub_cat definition problem in WP 2.5. Looks like it
		  had something to do with nested functions maybe

* 0.4
    * Verified to work with wordpress 2.5
    * Now has custom styling option through the collapsCat.css stylesheet
    * updated screenshots
    * moved javascript into collapsArch.php and got rid of separate file

* 0.3.7
    * strips html tags from post titles now

* 0.3.6
    * Fixed bug introduced in version 0.3.5 where all links in a category
      pointed to the same post

* 0.3.5
    * Now links should work with all sorts of permalink structures. Thanks to
      Krysthora http://krysthora.free.fr/ for finding this bug

* 0.3.4
    * Added option to sort categories by id or name

* 0.3.3
    * fixed bug in headers when collapsArch is not loaded
    * fixed a few minor markup issues to make it valid xhtml

* 0.3.2
    * posts now have the class "collapsCatPost" and can be styled with CSS.
      Some styling has been added in collapsCat.php
    * removed list icons in front of triangles

* 0.3.1
    * Added option to make post links to index.php, root, or archive.php, like
      collapsing-archives
    * Fixed link to category listings

* 0.3
    * Now uses only 2 database queries instead of 1 + 2*(count(categories))
    * Now supports infinite levels of subcategories

* 0.2.2: 
    * Added option to show pages in list or not

* 0.2.1: 
    * Added collapsing class to <li>s with triangles for CSS styling
    * Added style information to make triangles bigger and give a pointer
      cursor over them
    * Added title tags to triangles to indicate functionality