@@ -1,0 +1,25 @@
+   <ul style="list-style-type: none;width:300px;margin:0;padding:0;">
+    <li>
+     <input type="checkbox" name="showPostCount" <?php if(get_option('collapsCatShowPostCount')=='yes') echo 'checked'; ?> id="showPostCount"></input> <label for="showPostCount">Show Post Count in Category Links</label>
+    </li>
+    <li>
+     <input type="checkbox" name="showPages" <?php if(get_option('collapsCatShowPages')=='yes') echo 'checked'; ?> id="showPages"></input> <label for="showPages">Show Pages as well as posts</label>
+    </li>
+    <li><h5>Links based on:</h5>
+     <input type="radio" name="archives" <?php if(get_option('collapsCatLinkToArchives')=='root') echo 'checked'; ?> id="archivesRoot" value='root'></input> <label for="archivesRoot">site root (default)</label>
+     <input type="radio" name="archives" <?php if(get_option('collapsCatLinkToArchives')=='index') echo 'checked'; ?> id="archivesIndex" value='index'></input> <label for="archivesIndex">index.php </label>
+     <input type="radio" name="archives" <?php if(get_option('collapsCatLinkToArchives')=='archives') echo 'checked'; ?> id="archivesArchives" value='archives'></input> <label for="archivesArchives">archives.php</label>
+    </li>
+    <li><h5>Sort by:</h5>
+     <input type="radio" name="sort" <?php if(get_option('collapsCatSort')=='catName') echo 'checked'; ?> id="sortCatName" value='catName'></input> <label for="sortCatName">Category name</label>
+     <input type="radio" name="sort" <?php if(get_option('collapsCatSort')=='catId') echo 'checked'; ?> id="sortCatId" value='catId'></input> <label for="sortCatId">Category id</label>
+    </li>
+    <li><h5>Sort order:</h5>
+     <input type="radio" name="sortOrder" <?php if(get_option('collapsCatSortOrder')=='ASC') echo 'checked'; ?> id="sortASC" value='ASC'></input> <label for="sortASC">Ascending</label>
+     <input type="radio" name="sortOrder" <?php if(get_option('collapsCatSortOrder')=='DESC') echo 'checked'; ?> id="sortDESC" value='DESC'></input> <label for="sortDESC">Descending</label>
+    </li>
+    <li><h5>Expanding shows:</h5>
+     <input type="radio" name="showPosts" <?php if(get_option('collapsCatShowPosts')=='yes') echo 'checked'; ?> id="showPostsYes" value='yes'></input> <label for="showPostsYes">Sub-categories and Posts</label>
+     <input type="radio" name="showPosts" <?php if(get_option('collapsCatShowPosts')=='no') echo 'checked'; ?> id="showPostsNo" value='no'></input> <label for="showPostsNO">Just Sub-categories</label>
+    </li>
+   </ul>
